--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://33735036-a4f4-47dc-9688-4301417b84c7.preview.emergentagent.com
 WDS_SOCKET_PORT=443
