--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # IDE and editors
 .idea/
 .vscode/
+*.sublime-*
+*.swp
+*.swo
 
 # Dependencies
 node_modules/
@@ -15,6 +18,13 @@ node_modules/
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+
+# Package manager logs
+npm-debug.log
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.npm
 
 # Testing
 /coverage
@@ -75,6 +85,26 @@ agenthub/agents/youtube/db
 
 # Build caches
 .cache/
+.vite/
+.rollup.cache/
+
+# Vite & Frontend specific
+*.local
+/frontend/.vite/
+/frontend/dist/
+/frontend/stats.html
+
+# Backend specific
+/backend/logs/
+/backend/uploads/
+/backend/.env
+/backend/dist/
+
+# MongoDB
+*.mongodb
+mongod.lock
+/data/db/
+.mongodb/
 
 # Mobile development
 android-sdk/ 
